--- a/client/package.json
+++ b/client/package.json
@@ -10,17 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.4",
-    "@mui/x-data-grid": "^6.6.0",
-    "bootstrap": "^5.3.0",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.7.4",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.7",
-    "react-router-dom": "^6.12.1"
+    "@emotion/react": "11.7.1",
+    "@emotion/styled": "11.6.0",
+    "@material-ui/icons": "4.11.3",
+    "@mui/icons-material": "5.11.16",
+    "@mui/material": "5.4.2",
+    "@mui/system": "5.4.3",
+    "@mui/x-data-grid": "6.6.0",
+    "@reduxjs/toolkit": "1.9.5",
+    "@rjsf/core": "4.0.1",
+    "@rjsf/material-ui": "4.0.0",
+    "bootstrap": "5.2.3",
+    "crypto-js": "4.1.1",
+    "gh-pages": "5.0.0",
+    "react": "18.1.0",
+    "react-bootstrap": "2.7.2",
+    "react-dom": "18.1.0",
+    "react-jsonschema-form": "1.8.1",
+    "react-redux": "8.0.5",
+    "react-router-dom": "6.10.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "2.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
